Add Feedback button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
   </head>
   <body>
-    <img src="image.png" />
+    <div>
+      <img src="image.png" />
+    </div>
+    <div>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScSG0HD9klfNs_R5yHZsLEntmvOA84FdOAY4JhR2o_sfPjQvw/viewform?usp=sf_link">Have feedback? Leave us a note!</a>
+    </div>
   </body>
   </html>
