Very minor styling on the homepage

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   </head>
   <body>
     <div>
-      <img src="image.png" />
+      <a href="image.png"><img src="image.png" style="height:90%"/></a>
     </div>
     <div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLScSG0HD9klfNs_R5yHZsLEntmvOA84FdOAY4JhR2o_sfPjQvw/viewform?usp=sf_link">Have feedback? Leave us a note!</a>
+      <button onclick="window.location = 'https://docs.google.com/forms/d/e/1FAIpQLScSG0HD9klfNs_R5yHZsLEntmvOA84FdOAY4JhR2o_sfPjQvw/viewform?usp=sf_link'">Have feedback? Leave us a note!</button>
     </div>
   </body>
   </html>
